fix default config and too large logo.

--- a/mqtt/client/css/style.css
+++ b/mqtt/client/css/style.css
@@ -49,7 +49,8 @@
 
 #headerlogo {
     margin-left: 20px;
-    margin-top: 5px;
+    margin-top: 15px;
+    max-height: 50px;
 }
 
 .conniTop {
